Move rowClickAction and rowHighlightOnHover to rows configuration option of table
Introduces a breaking change where these options should be set through rows.xxxx

--- a/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/table/table.component.html
@@ -89,8 +89,8 @@
             cdkDrag
             [cdkDragDisabled]="dragDisabled"
             (cdkDragReleased)="dragDisabled = true"
-            [class.highlight]="options?.rowHighlightOnHover"
-            [class.clickable]="options?.rowClickAction"></tr>
+            [class.highlight]="options?.rows?.highlightOnHover"
+            [class.clickable]="options?.rows?.onClick"></tr>
         <div *cdkDragPlaceholder></div>
     </table>
 </section>
