Support setting the margin for a ppw-message-bar through a CSS variable

--- a/projects/ppwcode/ng-common-components/src/lib/message-bar/message-bar.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/message-bar/message-bar.component.html
@@ -1,4 +1,4 @@
-<mat-card class="ppw-message-severity-{{ severity }}">
+<mat-card class="ppw-message-bar ppw-message-severity-{{ severity }}">
     <mat-card-content class="ppw-message-bar-content">
         {{ message }}
     </mat-card-content>
