--- a/projects/ppwcode/ng-common-components/src/lib/message-bar/message-bar.component.scss
+++ b/projects/ppwcode/ng-common-components/src/lib/message-bar/message-bar.component.scss
@@ -1,3 +1,7 @@
+.ppw-message-bar {
+    margin: var(--ppw-message-bar-margin, 0px);
+}
+
 .ppw-message-bar-content {
     margin: var(--ppw-message-bar-spacing, 0px);
     display: flex;
