--- a/projects/ppwcode/ng-wireframe/src/lib/pagination-bar/pagination-bar.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/pagination-bar/pagination-bar.component.html
@@ -6,5 +6,6 @@
     [pageIndex]="pagedAsyncResult.entity.pageIndex - 1"
     [pageSizeOptions]="pageSizeOptions"
     [showFirstLastButtons]="showFirstLastButtons"
-    [hidePageSize]="hidePageSize">
+    [hidePageSize]="hidePageSize"
+>
 </mat-paginator>
