--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
     [style.--ppw-toolbar-background]="showToolbarBackground ? 'orange' : 'unset'"
     [navigationItems]="getNavigationItems()"
     [sidebarOptions]="sidebarOptions"
-    [toolbarHeightPx]="toolbarHeightPx">
+    [toolbarHeightPx]="toolbarHeightPx"
+>
     <ng-container ppw-toolbar-left-content *ngIf="showToolbarLogo">
         <img
             class="toolbar-left-logo"
