--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -7,7 +7,8 @@
         [opened]="!isSmallDevice && !isXSmallDevice && !sidebarOptions?.closedByDefaultOnLargerDevice"
         (opened)="sidebarOpened()"
         (closed)="sidebarClosed()"
-        class="ppw-app-wireframe-drawer">
+        class="ppw-app-wireframe-drawer"
+    >
         <ppw-left-sidenav
             (closeSidebar)="closeSidebar()"
             (navigated)="onNavigate()"
@@ -16,7 +17,8 @@
             [logoUrl]="sidebarOptions?.logoUrl"
             [logoHeight]="sidebarOptions?.logoHeight ?? 100"
             [logoWidth]="sidebarOptions?.logoWidth ?? 100"
-            [showMenuCloseButton]="isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice">
+            [showMenuCloseButton]="isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice"
+        >
             <div ppw-sidebar-top class="ppw-sidebar-top-content">
                 <ng-content select="[ppw-sidebar-top-content]"></ng-content>
             </div>
@@ -37,7 +39,8 @@
                     !!sidebarOptions?.closedByDefaultOnLargerDevice ||
                     (!sidebarOptions?.closedByDefaultOnLargerDevice &&
                         (isSmallDevice || (!sidebarIsOpen && !isLargerDevice)))
-                ">
+                "
+            >
                 <ng-container ppw-toolbar-left-content
                     ><ng-content select="[ppw-toolbar-left-content]"></ng-content
                 ></ng-container>
