--- a/src/app/filter-table/filter-table.component.html
+++ b/src/app/filter-table/filter-table.component.html
@@ -2,7 +2,8 @@
     *ngIf="searchForm"
     (search)="performSearch()"
     (reset)="performReset()"
-    [submitDisabled]="searchForm.invalid">
+    [submitDisabled]="searchForm.invalid"
+>
     <form [formGroup]="searchForm" class="flex-row gap-8">
         <mat-form-field>
             <mat-label>firstName</mat-label>
@@ -28,7 +29,8 @@
                     [options]="tableOptions"
                     [trackBy]="trackByFn"
                     (orderChanged)="orderChanged($event)"
-                    (selectionChanged)="updateSelected($event)">
+                    (selectionChanged)="updateSelected($event)"
+                >
                     <ppw-column name="firstName" type="text" label="First name"></ppw-column>
                     <ppw-column name="lastName" type="text" label="Last name"></ppw-column>
                     <ppw-column name="birthDate" type="date" label="Birth date"></ppw-column>
@@ -37,12 +39,14 @@
                         name="income"
                         type="number"
                         label="Income"
-                        [numberFormatFn]="formatIncome.bind(this)"></ppw-column>
+                        [numberFormatFn]="formatIncome.bind(this)"
+                    ></ppw-column>
                     <ppw-column
                         name="bonus"
                         type="number"
                         label="Bonus"
-                        [numberFormatFn]="formatBonus.bind(this)"></ppw-column>
+                        [numberFormatFn]="formatBonus.bind(this)"
+                    ></ppw-column>
                     <ppw-column name="rowIndex" type="template" label="Row index">
                         <ng-template ppw-column-cell let-rowIndex="rowIndex">
                             <span>{{ rowIndex }}</span>
@@ -66,7 +70,8 @@
                     [pagedAsyncResult]="players"
                     (page)="handlePageEvent($event)"
                     [pageSizeOptions]="[2, 5, 10, 20, 50]"
-                    [showFirstLastButtons]="true"></ppw-pagination-bar>
+                    [showFirstLastButtons]="true"
+                ></ppw-pagination-bar>
             </mat-card-content>
         </mat-card>
     </ng-template>
