[v16->v17] Switch to the new control flow syntax
ng generate @angular/core:control-flow-migration --path=src
ng generate @angular/core:control-flow-migration --path=projects
npm run format:prettier

--- a/projects/ppwcode/ng-async/src/lib/async-result/async-result.component.html
+++ b/projects/ppwcode/ng-async/src/lib/async-result/async-result.component.html
@@ -1,5 +1,5 @@
 <mtx-loader [loading]="pending" type="progressbar">
-    <ng-container *ngIf="asyncResult">
+    @if (asyncResult) {
         <ng-container
             *ngTemplateOutlet="
                 hasFailed ? failed : isInitial ? initialTemplate ?? null : successTemplate;
@@ -7,7 +7,7 @@
             "
         >
         </ng-container>
-    </ng-container>
+    }
 </mtx-loader>
 
 <ng-template #failed>
