--- a/projects/ppwcode/ng-common-components/src/lib/expandable-card/expandable-card.component.html
+++ b/projects/ppwcode/ng-common-components/src/lib/expandable-card/expandable-card.component.html
@@ -7,7 +7,9 @@
         (closed)="panelOpenState = canBeCollapsed"
     >
         <mat-expansion-panel-header class="ppw-expandable-panel-header">
-            <mat-panel-title *ngIf="cardTitle">{{ cardTitle }}</mat-panel-title>
+            @if (cardTitle) {
+                <mat-panel-title>{{ cardTitle }}</mat-panel-title>
+            }
         </mat-expansion-panel-header>
         <ng-content></ng-content>
     </mat-expansion-panel>
