--- a/projects/ppwcode/ng-dialogs/src/lib/confirmation-dialog/confirmation-dialog.component.html
+++ b/projects/ppwcode/ng-dialogs/src/lib/confirmation-dialog/confirmation-dialog.component.html
@@ -6,9 +6,11 @@
     [translateParams]="data.bodyParams"
 ></mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-stroked-button [mat-dialog-close]="false" *ngIf="!data.allowConfirmOnly">
-        <i class="fa-solid fa-ban"></i> {{ data.cancelKey | translate }}
-    </button>
+    @if (!data.allowConfirmOnly) {
+        <button mat-stroked-button [mat-dialog-close]="false">
+            <i class="fa-solid fa-ban"></i> {{ data.cancelKey | translate }}
+        </button>
+    }
     <button mat-raised-button [mat-dialog-close]="true" [color]="confirmationThemePalette">
         <i class="fa-solid fa-check"></i> {{ data.confirmationKey | translate }}
     </button>
