--- a/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
+++ b/projects/ppwcode/ng-wireframe/src/lib/wireframe/wireframe.component.html
@@ -1,53 +1,57 @@
 <mat-drawer-container class="ppw-app-wireframe-container">
-    <mat-drawer
-        [disableClose]="true"
-        *ngIf="showWireframe"
-        [mode]="sidenavMode"
-        [ngClass]="isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice ? 'drawer-full-width' : 'drawer'"
-        [opened]="!isSmallDevice && !isXSmallDevice && !sidebarOptions?.closedByDefaultOnLargerDevice"
-        (opened)="sidebarOpened()"
-        (closed)="sidebarClosed()"
-        class="ppw-app-wireframe-drawer"
-    >
-        <ppw-left-sidenav
-            (closeSidebar)="closeSidebar()"
-            (navigated)="onNavigate()"
-            [navigationItems]="navigationItems"
-            [centerLogo]="!!sidebarOptions?.centerLogo"
-            [logoUrl]="sidebarOptions?.logoUrl"
-            [logoHeight]="sidebarOptions?.logoHeight ?? 100"
-            [logoWidth]="sidebarOptions?.logoWidth ?? 100"
-            [showMenuCloseButton]="isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice"
+    @if (showWireframe) {
+        <mat-drawer
+            [disableClose]="true"
+            [mode]="sidenavMode"
+            [ngClass]="
+                isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice ? 'drawer-full-width' : 'drawer'
+            "
+            [opened]="!isSmallDevice && !isXSmallDevice && !sidebarOptions?.closedByDefaultOnLargerDevice"
+            (opened)="sidebarOpened()"
+            (closed)="sidebarClosed()"
+            class="ppw-app-wireframe-drawer"
         >
-            <div ppw-sidebar-top class="ppw-sidebar-top-content">
-                <ng-content select="[ppw-sidebar-top-content]"></ng-content>
-            </div>
-            <div ppw-sidebar-bottom class="ppw-sidebar-bottom-content">
-                <ng-content select="[ppw-sidebar-bottom-content]"></ng-content>
-            </div>
-        </ppw-left-sidenav>
-    </mat-drawer>
+            <ppw-left-sidenav
+                (closeSidebar)="closeSidebar()"
+                (navigated)="onNavigate()"
+                [navigationItems]="navigationItems"
+                [centerLogo]="!!sidebarOptions?.centerLogo"
+                [logoUrl]="sidebarOptions?.logoUrl"
+                [logoHeight]="sidebarOptions?.logoHeight ?? 100"
+                [logoWidth]="sidebarOptions?.logoWidth ?? 100"
+                [showMenuCloseButton]="isXSmallDevice || !!sidebarOptions?.closedByDefaultOnLargerDevice"
+            >
+                <div ppw-sidebar-top class="ppw-sidebar-top-content">
+                    <ng-content select="[ppw-sidebar-top-content]"></ng-content>
+                </div>
+                <div ppw-sidebar-bottom class="ppw-sidebar-bottom-content">
+                    <ng-content select="[ppw-sidebar-bottom-content]"></ng-content>
+                </div>
+            </ppw-left-sidenav>
+        </mat-drawer>
+    }
     <mat-drawer-content>
         <div class="ppw-page-container">
-            <ppw-toolbar
-                *ngIf="showWireframe"
-                (toggleSidebar)="toggleSidebar()"
-                [isSidenavOpen]="sidebarIsOpen"
-                [showPageTitle]="!!sidebarOptions?.showPageTitle"
-                [toolbarHeightPx]="toolbarHeightPx"
-                [showMenuToggle]="
-                    !!sidebarOptions?.closedByDefaultOnLargerDevice ||
-                    (!sidebarOptions?.closedByDefaultOnLargerDevice &&
-                        (isSmallDevice || (!sidebarIsOpen && !isLargerDevice)))
-                "
-            >
-                <ng-container ppw-toolbar-left-content
-                    ><ng-content select="[ppw-toolbar-left-content]"></ng-content
-                ></ng-container>
-                <ng-container ppw-toolbar-right-content>
-                    <ng-content select="[ppw-toolbar-right-content]"></ng-content>
-                </ng-container>
-            </ppw-toolbar>
+            @if (showWireframe) {
+                <ppw-toolbar
+                    (toggleSidebar)="toggleSidebar()"
+                    [isSidenavOpen]="sidebarIsOpen"
+                    [showPageTitle]="!!sidebarOptions?.showPageTitle"
+                    [toolbarHeightPx]="toolbarHeightPx"
+                    [showMenuToggle]="
+                        !!sidebarOptions?.closedByDefaultOnLargerDevice ||
+                        (!sidebarOptions?.closedByDefaultOnLargerDevice &&
+                            (isSmallDevice || (!sidebarIsOpen && !isLargerDevice)))
+                    "
+                >
+                    <ng-container ppw-toolbar-left-content
+                        ><ng-content select="[ppw-toolbar-left-content]"></ng-content
+                    ></ng-container>
+                    <ng-container ppw-toolbar-right-content>
+                        <ng-content select="[ppw-toolbar-right-content]"></ng-content>
+                    </ng-container>
+                </ppw-toolbar>
+            }
             <div class="ppw-page-content">
                 <router-outlet></router-outlet>
             </div>
