[v16->v17] Fix ng serve warning on property that is not null or undefined

--- a/src/app/filter-table/filter-table.component.html
+++ b/src/app/filter-table/filter-table.component.html
@@ -78,7 +78,7 @@
     </ng-template>
 </ppw-async-result>
 
-@if (playersToSave?.length) {
+@if (playersToSave.length) {
     <mat-card>
         <mat-card-header>
             <mat-card-title>Players after reordering</mat-card-title>
