Ensure newline characters are rendered as a new line in the confirmation dialog
Fixes #2

--- a/projects/ppwcode/ng-dialogs/src/lib/confirmation-dialog/confirmation-dialog.component.scss
+++ b/projects/ppwcode/ng-dialogs/src/lib/confirmation-dialog/confirmation-dialog.component.scss
@@ -2,3 +2,7 @@
     background: var(--ppw-confirmation-dialog-header-background-color);
     color: var(--ppw-confirmation-dialog-header-text-color);
 }
+
+mat-dialog-content {
+    white-space: pre-wrap;
+}
