Add justify-content-end to global styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -133,6 +133,10 @@ body {
     justify-content: space-between;
 }
 
+.justify-content-end {
+    justify-content: end;
+}
+
 .align-items-center {
     align-items: center;
 }
