--- a/projects/ppwcode/ng-common-components/src/lib/expandable-card/expandable-card.component.scss
+++ b/projects/ppwcode/ng-common-components/src/lib/expandable-card/expandable-card.component.scss
@@ -28,6 +28,10 @@ mat-accordion.ppw-expandable-card-accordion {
             border-bottom-right-radius: 0;
         }
 
+        mat-expansion-panel-header.ppw-expandable-panel-header .mat-expansion-panel-header-description {
+            justify-content: end;
+        }
+
         .mat-expansion-panel-content {
             .mat-expansion-panel-body {
                 padding-top: 16px;
